syntax = "proto3";

package proto;

import "internal/app/grpc/proto/common.proto";
import "internal/app/grpc/proto/requests.proto";
import "internal/app/grpc/proto/round.proto";
import "internal/app/grpc/proto/team.proto";
import "internal/app/grpc/proto/venue.proto";

service FixtureService {
    rpc ListSeasonFixtures(SeasonFixtureRequest) returns (stream Fixture) {}
    rpc FixtureByID(FixtureRequest) returns (Fixture) {}
}

message Fixture {
    int64 id = 1;
    Team home_team = 5;
    Team away_team = 6;
    Round round = 4;
    Venue venue = 7;
    Date date_time = 9;
}
